# multi_agents

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SETUP_GUIDE.md  config.example.yaml  pyproject.toml
.agent/workflows/: delegate-task.md
.github/agents/: implementer.agent.md  orchestrator.agent.md  reviewer.agent.md  tester.agent.md
.github/workflows/: publish.yml  test.yml
agent_maestro/: __init__.py  __main__.py  cli.py  config.py  protocol.py  queue.py  watcher.py
agent_maestro/runners/: __init__.py  base.py  copilot_runner.py
agent_maestro/scaffold/agents/: implementer.agent.md  orchestrator.agent.md  reviewer.agent.md  tester.agent.md
tests/: claim_worker.py  conftest.py  test_atomic_save.py  test_concurrent_claim.py  test_config.py  test_copilot_runner_safety.py  test_e2e.py  test_malformed_task_quarantine.py  test_protocol.py  test_queue.py  test_queue_concurrency.py
